# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  check_correct.py  cli.py  engine.py  game_engine.py
brain_games/games/: calc.py  calс.py  even.py  gcd.py  prime.py  progres.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_engine.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  calc_modul.py  even_modul.py  gcd_modul.py  prime_modul.py  progres_modul.py
