[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet project N1"
authors = ["sanswed <sanswed@gmail.com>"]
packages = [
 { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-even = "brain_games.scripts.games.brain_even:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
