[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "hexlet project N1"
authors = ["sanswed <sanswed@gmail.com>"]
repository = "https://github.com/ConstableFraser/python-project-lvl1"

classifiers = [
    "Topic :: Software Development",
    "Topic :: Education"
]

packages = [
 { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.brain_games:main"
brain-calc = "brain_games.brain_calc:main"
brain-even = "brain_games.brain_even:main"
brain-gcd = "brain_games.brain_gcd:main"
brain-progression = "brain_games.brain_progression:main"
brain-prime = "brain_games.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
